--- a/angular16-kendo12/package.json
+++ b/angular16-kendo12/package.json
@@ -15,20 +15,34 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
-    "@angular/localize": "^16.2.12",
+    "@angular/localize": "^16.2.0",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@progress/kendo-angular-buttons": "^12.1.0",
-    "@progress/kendo-angular-dialog": "^12.1.0",
-    "@progress/kendo-angular-dropdowns": "^12.1.0",
-    "@progress/kendo-angular-intl": "^12.1.0",
-    "@progress/kendo-angular-l10n": "^12.1.0",
-    "@progress/kendo-licensing": "^1.10.0",
+    "@progress/kendo-angular-buttons": "12.1.0",
+    "@progress/kendo-angular-dialog": "12.1.0",
+    "@progress/kendo-angular-dropdowns": "12.1.0",
+    "@progress/kendo-angular-grid": "^12.1.0",
+    "@progress/kendo-angular-intl": "12.1.0",
+    "@progress/kendo-angular-l10n": "12.1.0",
+    "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^6.7.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.0",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-angular-common": "12.1.0",
+    "@progress/kendo-angular-dateinputs": "12.1.0",
+    "@progress/kendo-angular-excel-export": "12.1.0",
+    "@progress/kendo-angular-icons": "12.1.0",
+    "@progress/kendo-angular-inputs": "12.1.0",
+    "@progress/kendo-angular-label": "12.1.0",
+    "@progress/kendo-angular-pdf-export": "12.1.0",
+    "@progress/kendo-angular-popup": "12.1.0",
+    "@progress/kendo-angular-utils": "12.1.0",
+    "@progress/kendo-angular-treeview": "12.1.0",
+    "@progress/kendo-svg-icons": "^1.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.16",
