--- a/angular20-kendo20/package.json
+++ b/angular20-kendo20/package.json
@@ -33,9 +33,13 @@
     "@progress/kendo-angular-buttons": "^22.0.1",
     "@progress/kendo-angular-dialog": "^22.0.1",
     "@progress/kendo-angular-dropdowns": "^22.0.1",
+    "@progress/kendo-angular-excel-export": "^22.0.1",
+    "@progress/kendo-angular-grid": "^22.0.1",
     "@progress/kendo-angular-intl": "^22.0.1",
     "@progress/kendo-angular-l10n": "^22.0.1",
+    "@progress/kendo-angular-pager": "^22.0.1",
     "@progress/kendo-angular-progressbar": "^22.0.1",
+    "@progress/kendo-data-query": "^1.7.3",
     "@progress/kendo-licensing": "^1.10.0",
     "@progress/kendo-theme-default": "^12.3.0",
     "rxjs": "~7.8.0",
